fix: date alignment in slots

--- a/packages/theme/styles/_layouts.scss
+++ b/packages/theme/styles/_layouts.scss
@@ -699,6 +699,7 @@ input.search {
 .min-w-8 { min-width: 2rem; }
 .min-w-9 { min-width: 2.25rem; }
 .min-w-12 { min-width: 3rem; }
+.min-w-28 { min-width: 7rem; }
 .min-w-50 { min-width: 12.5rem; }
 .min-w-60 { min-width: 15rem; }
 .min-w-80 { min-width: 20rem; }
